--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
-agp = "8.5.2"
-android-compileSdk = "35"
+agp = "8.11.1"
+android-compileSdk = "36"
 android-minSdk = "24"
-android-targetSdk = "35"
-androidx-activityCompose = "1.9.3"
-androidx-appcompat = "1.7.0"
-androidx-constraintlayout = "2.2.0"
-androidx-core-ktx = "1.15.0"
-androidx-espresso-core = "3.6.1"
-androidx-lifecycle = "2.8.3"
+android-targetSdk = "36"
+androidx-activityCompose = "1.10.1"
+androidx-appcompat = "1.7.1"
+androidx-constraintlayout = "2.2.1"
+androidx-core-ktx = "1.17.0"
+androidx-espresso-core = "3.7.0"
+androidx-lifecycle = "2.9.2"
 androidx-material = "1.12.0"
-androidx-test-junit = "1.2.1"
-compose-plugin = "1.7.0"
+androidx-test-junit = "1.3.0"
+compose-plugin = "1.8.2"
 junit = "4.13.2"
-kotlin = "2.0.21"
-kotlinx-coroutines = "1.9.0"
-navigationCompose = "2.8.0-alpha10"
-kotlinSerialization = "1.7.3"
-koin = "4.0.0"
-ktor = "3.0.0"
-coil3 = "3.0.0-rc02"
-ksp = "2.0.20-1.0.24"
-sqlite = "2.5.0-alpha11"
-room = "2.7.0-alpha11"
+kotlin = "2.2.10"
+kotlinx-coroutines = "1.10.2"
+navigationCompose = "2.8.0-alpha13"
+kotlinSerialization = "1.9.0"
+koin = "4.1.0"
+ktor = "3.2.3"
+coil3 = "3.3.0"
+ksp = "2.2.0-2.0.2"
+sqlite = "2.5.2"
+room = "2.7.2"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
